--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['bun']
 
 [phases.build]
-cmds = ['bun install --frozen-lockfile']
+cmds = ['bun install']
 
 [start]
 cmd = 'bun run index.ts'
