--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,4 @@ CDN_API_KEY=beans
 
 # server config
 HOST_PORT=3000 # port to host the file server on
-SERVER_PORT=443 # port that file URLs will point at
-SERVER_HOST=example.com
-SERVER_PROTOCOL=https
+SERVER_URL=http://example.com:1234 # where the server can be publically accessed
